fixing alignment issue
Fixing issue that caused the posters to align at different heights when resizing the window. Also added a fix that could cause unhandled index issues.

--- a/pages/dashboard/style.css
+++ b/pages/dashboard/style.css
@@ -4,7 +4,7 @@
 }
 
 .wrapper.dashboard {
-  min-height: calc(100vh - 168px)
+  height: 100%;
 }
 
 .dashboard {
@@ -13,9 +13,10 @@
 }
 
 .titles {
-  margin: 10px 20px;
-  transform: translateX(236px) translateY(131px);
+  margin-left: 20px;
+  transform: translateX(236px) translateY(10px);
   width: min-content;
+  height: 0;
   overflow: visible;
 }
 
@@ -38,7 +39,7 @@
 }
 .poster-dashboard:first-child {
   width: 236px;
-  height: 324px;
+  height: 337px;
 }
 .poster-dashboard:last-child {
   margin-right: 0;
@@ -569,6 +570,9 @@
   :root {
     --side_panel_width: 320px;
     --search_result_height: 150px;
+  }
+  .titles {
+    transform: translateX(236px) translateY(25px);
   }
   .titles h1,
   .titles h3 {
